--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "latest": "^0.2.0",
     "next": "^13.2.4",
     "node": "^19.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
